       too many entries. (Stefan)
- CHG: Issue #624: in page error writing log file. (Stefan)
- BUG: Issue #626: Applying patch can find
       wrong "better" path. (Stefan)
- BUG: Issue #628: Invalid urls in repobrowser
       for SVNParentPath. (Stefan)
- BUG: Issue #629: log dialog closes merge
       dialog. (Stefan)
- BUG: Issue #630: svn:global-ignores not
       used when adding. (Stefan)

Version 1.8.5
- BUG: Issue #594: "Diff with url" generated
       patch does not apply. (Stefan)
- BUG: Issue #497: "restore after commit" must
       restore on cancel as well. (Stefan)
- BUG: Issue #595: TortoisePlink crash
       for x64. (Stefan)
- BUG: Issue #601: Crash fetching properties
       in CfM dialog. (Stefan)
- BUG: Issue #602: Log dialog message loses
       formatting after clicking a link. (Stefan)
- BUG: Issue #603: TortoiseBlame: Blue wavy
       lines in C header files. (Sup Yut Sum)
- BUG: Issue #607: TortoiseMerge fails to restore
       Unicode characters. (Stefan)
- BUG: Issue #608: revision graph export to svg
       fails to escape text. (Stefan)
- BUG: Issue #611: log dialog does not fetch all
       revisions specified in merge dialog. (Stefan)
- BUG: Issue #614: TSVNCache crash when
       removing cached data. (Stefan)
- BUG: Issue #616: "update" not available in
       check-for-modifications context menu. (Stefan)

Version 1.8.4
- BUG: Issue 584: Revert from log dialog bottom pane
       fails if the file was deleted. (Sergey Azarkevich)
- BUG: Issue #585: repo browser doesn't refresh directory
       browser when clicking "up a directory". (Stefan)
- BUG: Issue #587: wrong colors in locatorbar
       in TortoiseBlame. (Stefan)
- BUG: Issue #588: subwcrev crash after replacing
       $WCREV$ in UTF-16 encoded file. (Stefan)
- BUG: Issue #590: "create patch" for added files
       always includes parent folders. (Stefan)
- NEW: Issue #586: Option to disable SVNParentPath
       handling in repo browser. (Stefan)

Version 1.8.3